welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:84: error: Unmatched closing brace '}' ignored here
		}
                ^FlowerCase:92: error: eof expected but '}' found.
}
^